[gd_scene load_steps=3 format=3 uid="uid://d1mlqhsnbs87a"]

[ext_resource type="Script" uid="uid://c5177wxtv7cme" path="res://EncounterManager.gd" id="1_0k8vj"]
[ext_resource type="Script" uid="uid://42gs2xu2jhm8" path="res://StoryManager.gd" id="2_3h4mk"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0k8vj")

[node name="EncounterContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CutscenePlayer" type="VideoStreamPlayer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="CutsceneOverlay" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.8)

[node name="CutsceneText" type="Label" parent="CutsceneOverlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -25.0
offset_right = 100.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "Act Transition"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StoryManager" type="Node" parent="."]
script = ExtResource("2_3h4mk")
